Fixed a fault that caused the expand button in the main display (in the cells) to remain visible when dragging an event.

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -207,6 +207,10 @@ div.calendar {
             $area-disabled-stripped $spacing,
             $area-disabled-stripped $spacing * 2
         );
+
+        div.ib-arrow-expand-left-right-icon {
+            display: none !important;
+        }
     }
 
     div.drag-not-allowed-weekend-day {
@@ -217,6 +221,10 @@ div.calendar {
             $area-disabled-stripped-weekend-day $spacing,
             $area-disabled-stripped-weekend-day $spacing * 2
         );
+
+        div.ib-arrow-expand-left-right-icon {
+            display: none !important;
+        }
     }
 
     div.no-events-available-text {
